# ws2infer

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.sh  config.json  demo_server  demo_server.cpp  infer.html  requirements.txt  simple_server.cpp  simple_test.cpp  test_client.html
mmds/: ONNXsystem.mmd  architecture_cam2webrtc.mmd  architecture_ws2infer.mmd  onnx-websocket-lang-speed.mmd  system.mmd  system_next.mmd
py/: README.md  client_example.py  requirements.txt  ws2infer_server.py
src/: config.rs  config_loader.cpp  config_loader.h  environment_detector.cpp  environment_detector.h  frame_extractor.cpp  frame_extractor.h  high_performance_sfu.rs  main.cpp  main.rs  onnx_inference.cpp  onnx_inference.h  onnx_inference_old.cpp  onnx_inference_real.cpp  postprocessor.cpp  postprocessor.h  preprocessor.cpp  preprocessor.h  websocket_server.cpp  websocket_server.h
static/: sender.html  viewer.html
