[package]
name = "cam2webrtc"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = { version = "0.3", features = ["tls"] }
rcgen = "0.11"
tokio-tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
webrtc = "0.9"
bytes = "1.0"
async-trait = "0.1"
byteorder = "1.4"
chrono = { version = "0.4", features = ["serde"] }
# mediasoup = "0.12"  # ビルド問題のため一時コメント
# 高性能SFU実装用 - 依存問題を回避
# openh264 = "0.6"  # Windowsビルド問題
# ffmpeg-next = "7.0"  # pkg-config問題
# WebTransport用 (準備)
# web-transport = "0.1"
